--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
                 <div class="team-member-text-paddings">
                   <h3 class="team-member">Tom Ford</h3>
                   <p class="team-member-p">Frontend Developer</p>
-                </div>
+                  
+
+                              </div>
               </div>
             </li>
             <li>
@@ -150,6 +152,9 @@
                 <div class="team-member-text-paddings">
                   <h3 class="team-member">Camila Garcia</h3>
                   <p class="team-member-p">Marketing</p>
+ul.social-list>li.social-list-item*4>a.social-list-link>svg.social-list-icon>use
+
+
                 </div>
               </div>
             </li>
@@ -164,6 +169,8 @@
                 <div class="team-member-text-paddings">
                   <h3 class="team-member">Daniel Wilson</h3>
                   <p class="team-member-p">UI Designer</p>
+ul.social-list>li.social-list-item*4>a.social-list-link>svg.social-list-icon>use
+
                 </div>
               </div>
             </li>
@@ -178,6 +185,10 @@
                 <div class="team-member-text-paddings">
                   <h3 class="team-member">Mark Guerrero</h3>
                   <p class="team-member-p">Product Designer</p>
+ul.social-list>li.social-list-item*4>a.social-list-link>svg.social-list-icon>use
+
+
+
                 </div>
               </div>
             </li>
@@ -199,3 +210,11 @@
     </footer>
   </body>
 </html>
+
+<ul> 
+  <li class="social-links-atim">     <a href=""
+  </li>
+  <li class="social-links-atim social-list-link-facebook "> <a href=""></a> </li>
+    <li class="social-links-atim"> <a href="" </li>
+      <li class="social-links-atim"> <a href="" </li>
+</ul>
